# medicheck

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: main.py
app/api/: endpoints.py
app/flow_graph/: langgraph.py
app/models/: clinical_summary.py  output.py
app/prompts/: guardrail_prompt.py  pdf_extraction_prompt.py  policy_eval_prompt.py  summary_prompt.py  validator_suggestion_prompt.py
app/services/: guardrail.py  pdf_validator.py  policy.py  summary.py  validator.py
app/static/: index.html  script.js  style.css
app/ui/: app.py
app/utils/: llm.py
policy_data/: default_policy.py  example_json.py  guardrail_fail_summary.json  policy_fail_summary.json  policy_pass_summary.json  validation_fail_summary.json
