[tool.poetry]
name = "clinical-summary-generator"
version = "0.1.0"
description = "AI-powered clinical summary validator for insurance approval"
authors = ["Priyanshu Vadhwani <priyanshu.vadhwani@coditas.in>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
uvicorn = "^0.35.0"
streamlit = "^1.46.0"
requests = "^2.32.0"
python-multipart = "^0.0.20"
python-dotenv = "^1.1.0"
langchain = "^0.3.0"
langchain-groq = "^0.3.0"
langgraph = "^0.5.0"
pydantic = "^2.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
streamlit-app = "ui.app:main"
